tests/fixtures/invalid/actors/external_state_write.lby
# An actor's `state` is private: no external field write. -> L0354
actor Counter
    state
        count i64

    on inc
        count += 1

fn main -> i64
    let c Actor<Counter> = spawn Counter()
    c.count = 99
    0
